# pyback

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  alembic.ini  config.toml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml
.github/test-events/: push_event.json
.github/workflows/: ci-cd.yml
docs/: CHANGELOG.md  api.md  getting-started.md
src/pyback/: __init__.py  main.py
src/pyback/api/dependencies/: auth.py  common.py  db.py  rate_limit.py  users.py
src/pyback/api/middleware/: processing_time.py
src/pyback/api/models/: auth.py  common.py  user.py
src/pyback/api/routes/: auth.py  root.py  users.py
src/pyback/config/: log_models.py  logging_config.py  rate_limit.py  settings.py
src/pyback/core/: auth.py  exceptions.py  utils.py
src/pyback/db/: postgres.py  redis.py
src/pyback/db/init/: 00_init.sql  init-user-db.sh
src/pyback/db/migrations/: env.py
src/pyback/db/migrations/versions/: 43cd39b7f960_initial_migration.py
src/pyback/db/models/: base.py  user.py
src/pyback/db/repositories/: users.py
src/pyback/services/: auth.py  users.py
tests/: conftest.py  middleware.py
tests/e2e/: test_auth_workflow.py  test_rate_limit_workflow.py  test_user_workflow.py
tests/integration/: test_auth_endpoints.py  test_handlers.py  test_health_check.py  test_rate_limit_endpoints.py  test_user_endpoints.py
tests/unit/: test_add.py
